# 462_

./: .gitignore  README.md
admin/: README.md  grades  grades_week7  week8_grades
cncretrofit/: .gitattributes  CLAUDE.md  README.md  pyproject.toml
cncretrofit/examples/: gui.py  workpiece_view.py
cncretrofit/src/cncctl/: __init__.py
cncretrofit/src/cncctl/controller/: real.py  state.py
cncretrofit/src/cncctl/streamer/: character_counter.py  line_source.py
cncretrofit/tests/hil/: test_calibrate_steps.py  test_send_program.py  test_serial_welcome.py
cncretrofit/tests/integration/: test_real_controller_integration.py
cncretrofit/tests/unit/: test_gcode_modal.py  test_streamer.py  test_viz_analyze.py
cncretrofit/tools/grblhal_sim/: loopback.py  simulator.py
docs/: README.md
docs/hardware/: First_Look.docx
grbl/: MODIFICATIONS.md  README-build.md  README.md  build-grblhal.ps1  build-grblhal.sh
grbl/RP2040/: CMakeLists.txt  my_machine.h
grbl/firmware/: grblHAL_pico_3axis_homing.uf2
pitrofit/: .gitattributes  README.md  requirements-dev.txt  requirements.txt
pitrofit/cnc_backups/: grblhal_settings_20260628_170423.json  grblhal_settings_20260628_170424.json  grblhal_settings_20260628_172354.json
pitrofit/deploy/: README.md  install-launcher.sh  install.sh  uninstall.sh
pitrofit/depo/: DENEMEsd.nc  README.md  denemesene.nc
pitrofit/examples/: cad_cam.py  camera.py  gui.py  pcb.py  walkthrough.py  workpiece_view.py
pitrofit/src/cncctl/: config_io.py
pitrofit/src/cncctl/calibration/: __init__.py
pitrofit/src/cncctl/controller/: messages.py  real.py
pitrofit/src/cncctl/protocol/: realtime.py
pitrofit/src/cncctl/streamer/: __init__.py
pitrofit/src/cncctl/transport/: __init__.py  serial_transport.py
pitrofit/tests/hil/: test_send_program.py
pitrofit/tests/unit/: test_buffer_account.py  test_config_io.py  test_fake_controller.py  test_grblhal_sim.py  test_smoke.py
software/: README.md
software/cncretrofit/: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
software/cncretrofit/.github/workflows/: ci.yml
software/cncretrofit/config/: machine.toml
software/cncretrofit/examples/: console.py  gui.py  pendant.py  walkthrough.py  workpiece_sim.py
software/cncretrofit/src/cncctl/: config_io.py  facade.py  log.py
software/cncretrofit/src/cncctl/calibration/: backlash.py
software/cncretrofit/src/cncctl/controller/: __init__.py  errors.py  messages.py  protocol.py  real.py  state.py
software/cncretrofit/src/cncctl/gcode/: modal.py  parse.py
software/cncretrofit/src/cncctl/protocol/: inbound.py  realtime.py
software/cncretrofit/src/cncctl/safety/: __init__.py
software/cncretrofit/src/cncctl/streamer/: __init__.py  character_counter.py
software/cncretrofit/tests/hil/: test_bootstrap.py  test_calibrate_steps.py  test_send_program.py  test_serial_welcome.py
software/cncretrofit/tests/integration/: test_sim_streaming.py
software/cncretrofit/tests/unit/: test_cli.py  test_config_io.py  test_facade.py  test_facade_send_program.py  test_fake_controller.py  test_fake_transport.py  test_inbound.py  test_messages.py  test_real_controller.py  test_realtime.py  test_state.py  test_transport_framing.py  test_viz_simulate.py  test_viz_workpiece.py
software/cncretrofit/tools/grblhal_sim/: __init__.py  loopback.py
software/cncretrofit/tools/replay/: __init__.py
software/pitrofit/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run-gui.sh
software/pitrofit/.github/workflows/: ci.yml
software/pitrofit/cnc_backups/: grblhal_settings_20260628_170432.json  grblhal_settings_20260628_170508.json  grblhal_settings_20260628_172352.json
software/pitrofit/config/: machine.toml
software/pitrofit/deploy/: 99-cncctl-grblhal.rules  README.md  cncctl-gui.desktop  cncctl-kiosk.service  cncctl-to-desktop  start-kiosk.sh
software/pitrofit/depo/: MY.nc  baa2.nc  deneme23.nc  drawing2.nc  drawing3.nc  pcb.nc  poly.nc
software/pitrofit/examples/: console.py  gui.py  pendant.py  touch_input.py  visual_align.py  workpiece_core.py  workpiece_view.py
software/pitrofit/src/cncctl/: __init__.py  cli.py  config_io.py  facade.py  log.py
software/pitrofit/src/cncctl/calibration/: backlash.py  squaring.py  steps_per_mm.py
software/pitrofit/src/cncctl/controller/: errors.py  fake.py  protocol.py  real.py
software/pitrofit/src/cncctl/gcode/: __init__.py  modal.py  parse.py
software/pitrofit/src/cncctl/protocol/: __init__.py  inbound.py  outbound.py
software/pitrofit/src/cncctl/safety/: __init__.py
software/pitrofit/src/cncctl/streamer/: line_source.py
software/pitrofit/src/cncctl/transport/: base.py  fake_transport.py  serial_transport.py
software/pitrofit/src/cncctl/viz/: README.md  analyze.py  render.py  simulate.py  workpiece.py
software/pitrofit/tests/hil/: test_bootstrap.py  test_calibrate_steps.py  test_placeholder.py  test_send_program.py  test_serial_welcome.py
software/pitrofit/tests/integration/: test_facade_send_program_integration.py  test_real_controller_integration.py
software/pitrofit/tests/unit/: test_buffer_account.py  test_calibration.py  test_cli.py  test_facade.py  test_facade_send_program.py  test_fake_controller.py  test_fake_transport.py  test_gcode_parse.py  test_grblhal_sim.py  test_inbound.py  test_line_source.py  test_messages.py  test_outbound.py  test_real_controller.py  test_realtime.py  test_state.py  test_viz_analyze.py  test_viz_render.py
software/pitrofit/tools/grblhal_sim/: loopback.py  simulator.py
(+5 files in other folders)
